--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://registry.npmjs.org/
-@dinhtrumdieu:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=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
+@findxdn:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=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
