--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@findxdn/erp-theme",
+  "name": "@findxdn/erp-themest1",
   "version": "0.0.14",
   "description": "A simple template for a custom React component library",
   "scripts": {
@@ -57,6 +57,13 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@mui/lab": "^5.0.0-alpha.78"
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.78",
+    "chart.js": "^3.7.1",
+    "react-chartjs-2": "^4.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   }
 }
