--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findxdn/erp-theme",
-  "version": "0.0.14",
+  "version": "0.0.16",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -35,6 +35,7 @@
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.34",
+    "@types/react-lazyload": "^3.2.0",
     "@types/react-router-dom": "^5.3.3",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
@@ -64,6 +65,7 @@
     "@mui/lab": "^5.0.0-alpha.78",
     "chart.js": "^3.7.1",
     "react-chartjs-2": "^4.1.0",
+    "react-lazyload": "^3.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   }
