--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@findxdn/erp-themest1",
-  "version": "0.0.17",
+  "name": "@findxdn/erp-theme",
+  "version": "0.0.18",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
