--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findxdn/erp-theme",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -44,6 +44,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-postcss": "^4.0.1",
