--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@findxdn/erp-theme",
+  "name": "@findxdn/erp-themest1",
   "version": "0.0.57",
   "description": "A simple template for a custom React component library",
   "scripts": {
