--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@findxdn/erp-themest1",
-  "version": "0.0.57",
-  "description": "A simple template for a custom React component library",
+  "name": "@findxdn/erp-theme",
+  "version": "0.0.58 ",
+  "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
     "test": "jest",
