--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@findxdn/erp-theme",
-  "version": "0.0.60",
+  "name": "@findxdn/erp-theme1",
+  "version": "0.0.61",
   "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
