--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findxdn/erp-theme",
-  "version": "0.0.70",
+  "version": "0.0.74",
   "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -64,6 +64,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.78",
     "chart.js": "^3.7.1",
+    "downshift": "^6.1.7",
     "react-chartjs-2": "^4.1.0",
     "react-lazyload": "^3.2.0",
     "react-router": "^5.2.0",
