--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@findxdn/erp-theme",
+  "name": "@findxdn/erp-theme1",
   "version": "0.0.98",
   "description": "A imple template for a custom React component library",
   "scripts": {
