--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findxdn/erp-theme",
-  "version": "0.0.113",
+  "version": "0.0.116",
   "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -35,11 +35,13 @@
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.34",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-lazyload": "^3.2.0",
     "@types/react-router-dom": "^5.3.3",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "downshift": "^6.1.7",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
@@ -64,8 +66,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.78",
     "chart.js": "^3.7.1",
-    "downshift": "^6.1.7",
-    "react-chartjs-2": "^4.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-lazyload": "^3.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
