--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.78",
+    "@mui/lab": "5.0.0-alpha.78",
+    "@mui/material": "5.3.0",
     "chart.js": "^3.7.1",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.1",
     "react-chartjs-2": "^4.2.0",
     "react-lazyload": "^3.2.0",
     "react-router": "^5.2.0",
