--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@findxdn/erp-theme1",
-  "version": "0.0.131",
+  "name": "@findxdn/erp-theme",
+  "version": "0.0.132",
   "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
