--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/lab": "5.0.0-alpha.68",
+    "@mui/icons-material": "5.4.2",
+    "@mui/lab": "5.0.0-alpha.75",
     "@mui/material": "5.4.2",
-    "@mui/styles": "^5.4.2",
+    "@mui/styles": "5.4.2",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "moment": "^2.29.1",
