--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findxdn/erp-theme",
-  "version": "0.0.148",
+  "version": "0.0.149",
   "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -68,6 +68,7 @@
     "@mui/lab": "5.0.0-alpha.75",
     "@mui/material": "5.4.2",
     "@mui/styles": "5.4.2",
+    "@mui/x-date-pickers": "^5.0.0-beta.7",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "moment": "^2.29.1",
