--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findxdn/erp-theme",
-  "version": "0.0.166",
+  "version": "0.0.167",
   "description": "A imple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -71,8 +71,11 @@
     "@mui/x-date-pickers": "^5.0.0-beta.7",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.5",
     "moment": "^2.29.1",
+    "react": "^17.0.1",
     "react-chartjs-2": "^4.2.0",
+    "react-dom": "^17.0.2",
     "react-lazyload": "^3.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
